<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShoppingCategoryActivity">


    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/shop_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_books"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot"
        app:srcCompat="@drawable/book" />

    <ImageView
        android:id="@+id/iv_clothing"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/iv_books"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot"
        app:srcCompat="@drawable/clothing" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/books"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/iv_books"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="@+id/iv_books"
        app:layout_constraintTop_toBottomOf="@+id/iv_books" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/clothing"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/iv_clothing"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="@+id/iv_clothing"
        app:layout_constraintTop_toBottomOf="@+id/iv_clothing" />

    <ImageView
        android:id="@+id/iv_organic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/organic_food" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/organic_foods"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/iv_organic"
        app:layout_constraintStart_toStartOf="@+id/iv_organic"
        app:layout_constraintTop_toBottomOf="@+id/iv_organic" />

    <ImageView
        android:id="@+id/iv_medicines"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/iv_organic"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/medicines" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/medicines"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/iv_medicines"
        app:layout_constraintStart_toStartOf="@+id/iv_medicines"
        app:layout_constraintTop_toBottomOf="@+id/iv_medicines" />

</androidx.constraintlayout.widget.ConstraintLayout>